--- a/.github/workflows/pelican-publish.yml
+++ b/.github/workflows/pelican-publish.yml
@@ -31,7 +31,7 @@ jobs:
         pelican -D content
 
     - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@4.7.2
+      uses: JamesIves/github-pages-deploy-action@v4.7.2
       with:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
