--- a/.github/workflows/pelican-publish.yml
+++ b/.github/workflows/pelican-publish.yml
@@ -3,6 +3,19 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+defaults:
+  run:
+    shell: bash
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,10 +43,18 @@ jobs:
       run: |
         pelican -D content
 
-    - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@v4.7.2
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: output # The folder the action should deploy.
-        CLEAN: true # Automatically remove deleted files from the deploy branch
+        path: ./output
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
